# This file is part of GNU Radius.
# Copyright (C) 2002, 2003, 2007, 2010, 2013 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# GNU Radius is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# GNU Radius is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radius.  If not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST=\
 README \
 ascend.rw \
 c3620.rw \
 cisco.rw \
 comos.rw\
 jetstream.rw \
 hints-0.96 \
 nt.rw \
 filter.rw \
 config.syntax \
 pam.conf
