# This file is part of GNU Radius.
# Copyright (C) 2000-2025 Free Software Foundation, Inc.
#      
# Written by Sergey Poznyakoff
#
# GNU Radius is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# GNU Radius is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radius.  If not, see <http://www.gnu.org/licenses/>. 

SUBDIRS = parseopt
noinst_LIBRARIES = libradextra.a
libradextra_a_SOURCES = \
 intl.c\
 radcli.c\
 readline.c 

lib_LTLIBRARIES=libgnuradius.la

NTOSTR_C = \
 inttostr.c\
 longtostr.c\
 offtostr.c\
 sizetostr.c\
 uinttostr.c\
 ulongtostr.c

libgnuradius_la_SOURCES= \
 argcv.c\
 ascend.c\
 avl.c\
 c-strcase.c\
 client.c\
 cryptpass.c\
 dbm.c\
 debug.c\
 deflog.c\
 dict.c\
 envar.c\
 getgr.c\
 getpw_r.c\
 insist.c\
 iputil.c\
 list.c\
 logger.c\
 md4.c\
 md5.c\
 md5crypt.c\
 mem.c\
 nas.c\
 printutmp.c\
 raddb.c\
 radpaths.c\
 radpdu.c\
 radsrv.c\
 radutmp.c\
 realms.c\
 sha1.c\
 smbdes.c\
 slist.c\
 strbuf.c\
 symtab.c\
 sysdep.c\
 users-gram.c\
 users-lex.c\
 util.c\
 $(NTOSTR_C)

libgnuradius_la_LIBADD = parseopt/libparseopt.la

localedir = $(datadir)/locale

libgnuradius_la_LDFLAGS = --version-info @VI_CURRENT@:@VI_REVISION@:@VI_AGE@

AM_CPPFLAGS=@RADIUS_INCLUDE_PATH@ -DLOCALEDIR=\"$(localedir)\" @PATHFLAGS@

BUILT_SOURCES=users-gram.c users-lex.c
MAINTAINERCLEANFILES=users-gram.c users-gram.h users-lex.c
MOSTLYCLEANFILES=
EXTRA_DIST=users-gram.y users-lex.l numtostr.c intprops.h gettext.h

noinst_HEADERS=users-gram.h 

AM_YFLAGS=-vdt

.l.c:
	$(FLEX) -o $@ $(AM_LFLAGS) $<
.y.c:
	$(BISON) -o $@ $(AM_YFLAGS) $<

users-gram.c users-gram.h: users-gram.y
users-lex.c: users-lex.l

users-lex.o: users-lex.c users-gram.h $(top_srcdir)/include/parser.h
users-gram.o: users-gram.c users-gram.h $(top_srcdir)/include/parser.h

