# This file is part of GNU Radius.
# Copyright (C) 2000, 2001, 2003, 2010, 2013 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# GNU Radius is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
 GNU-RADIUS-SERVER-MIB.chart\
 GNU-RADIUS-SERVER-MIB.txt\
 GNU-RADIUS-STAT-MIB.chart\
 GNU-RADIUS-STAT-MIB.txt\
 RADIUS-ACC-SERVER-MIB.chart\
 RADIUS-ACC-SERVER-MIB.txt\
 RADIUS-AUTH-SERVER-MIB.chart\
 RADIUS-AUTH-SERVER-MIB.txt\
 RADIUS-STAT-MIB.txt\
 README\
 radmibs.h.in

