# This file is part of GNU Radius.
# Copyright (C) 2000-2025 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# GNU Radius is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

sbin_PROGRAMS = @RADIUS_DAEMON@
EXTRA_PROGRAMS  = radiusd
radiusd_SOURCES = \
 acct.c\
 auth.c\
 builddbm.c\
 checkrad.c\
 config.c\
 dynload.c\
 exec.c\
 files.c\
 forward.c\
 input.c\
 log.c\
 menu.c\
 mlc.c\
 pam.c\
 proxy.c\
 radck.c\
 radius.c\
 radiusd.c\
 radutil.c\
 request.c\
 rewrite.c\
 rpp.c\
 scheme.c\
 snmpserv.c\
 sql.c\
 stat.c\
 timestr.c\
 tsh.c\
 version.c

radiusd_LDADD = @LEXLIB@ @SQLLIB@ ../snmplib/libradsnmp.a @RADIUSD_LDADD_LIST@ @LIBRADEXTRA@ @LIBGNURADIUS@ @READLINE_LIBS@ @LIBINTL@
BUILT_SOURCES   = config.c rewrite.c
MAINTAINERCLEANFILES=config.c rewrite.c y.output
AM_CPPFLAGS=\
 @RADIUS_INCLUDE_PATH@ @GUILE_INCLUDES@\
 @PATHFLAGS@\
 -DRADIUS_DATADIR=\"$(pkgdatadir)/$(VERSION)\" -DRADIUS_LIBDIR=\"$(pkglibdir)/$(VERSION)\"
EXTRA_DIST      = config.y rewrite.y radiusd.gdb

AM_YFLAGS = -vt

.y.c:
	$(BISON) -o $@ $(AM_YFLAGS) $<

config.c: config.y
config.o: config.c ../include/radiusd.h 
rewrite.c: rewrite.y

