# This file is part of GNU Radius.
# Copyright (C) 2000, 2001, 2003, 2004, 2010, 2013 Free Software Foundation,
# Inc.
#
# Written by Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# GNU Radius is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
bin_PROGRAMS    = radwho
radwho_SOURCES = radwho.c 
radwho_LDADD   = @LIBGNURADIUS@ @LIBRADEXTRA@ @LIBINTL@
AM_CPPFLAGS=@PATHFLAGS@ @RADIUS_INCLUDE_PATH@

