# This file is part of GNU Radius.
# Copyright (C) 2000-2025 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# GNU Radius is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST=\
 dict.awk\
 dot.emacs\
 gud-wrapper\
 mksnmp-h.awk\
 radius-devel.el\
 request.list\
 sqlmod.sh\
 update-dict.awk

m4datadir = $(datadir)/aclocal
dist_m4data_DATA = radius.m4
